# aoiro_engine

./: CMakeLists.txt  README.md  main.cpp
src/graphics/: BatchRenderer2D.cpp  BatchRenderer2D.h  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h  window.cpp  window.h
src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
src/maths/: mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/shaders/: basic.frag  basic.vert
src/utils/: fileutils.h
